# data-analytics-ca

./: .env.example  .gitignore  Build_Plan.md  CLAUDE.md  Data_Sources_Reference_List.md  KB_Architecture_Plan.md  README.md  pyproject.toml
infra/: redshift_schema.sql  setup.py  teardown.py
src/: agent.py  api.py  config.py  prompt_check.py
src/ingest/: cmhc.py  credit_trends.py  mortgage_rates.py  statcan.py
src/load/: redshift_loader.py
src/transform/: cmhc.py  cmhc_income_tenure.py  credit_trends.py  mortgage_rates.py  statcan.py
